--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="dist/css/adminlte.min.css"/>
     <!-- overlayScrollbars -->
     <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css"/>
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css"/>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -82,7 +80,7 @@
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
                     data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+           with font-awesome or any other icon font library -->
                     <li class="nav-item">
                         <a href="#" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
@@ -102,6 +100,23 @@
                                 <a href="dictValueView.html" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>字典数值管理</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-th-list"></i>
+                            <p>
+                                活动管理
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="activityView.html" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>活动管理</p>
                                 </a>
                             </li>
                         </ul>
@@ -193,9 +208,6 @@
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Sparkline -->
 <script src="plugins/sparklines/sparkline.js"></script>
-<!-- daterangepicker -->
-<script src="plugins/moment/moment.min.js"></script>
-<script src="plugins/daterangepicker/daterangepicker.js"></script>
 <!-- Tempusdominus Bootstrap 4 -->
 <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 <!-- overlayScrollbars -->
