--- a/src/main/webapp/dictTypeView.html
+++ b/src/main/webapp/dictTypeView.html
@@ -195,19 +195,27 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <table id="dictTypes" class="table table-bordered table-hover">
-                            <thead>
-                            <tr>
-                                <th><input type="checkbox"></th>
-                                <th>编号</th>
-                                <th>名称</th>
-                                <th>描述</th>
-                                <th>操作</th>
-                            </tr>
-                            </thead>
-                            <tbody id="">
-                            </tbody>
-                        </table>
+                        <div class="card">
+                            <div class="card-body table-responsive p-1">
+                                <table id="dictTypes" class="table table-bordered table-hover" data-currentpage="1"
+                                       data-rowsperpage="10">
+                                    <thead>
+                                    <tr>
+                                        <th><input type="checkbox"></th>
+                                        <th>编号</th>
+                                        <th>名称</th>
+                                        <th>描述</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="">
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="card-footer" style="background-color: #ffffff">
+                                <div id="pages"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- /.rows -->
@@ -310,6 +318,9 @@
 <script src="plugins/pdfmake/vfs_fonts.js"></script>
 <!-- SweetAlert2 -->
 <script src="plugins/sweetalert2/sweetalert2.min.js"></script>
+<!-- Bootstrap Pagination-->
+<script src="plugins/bs_pagination/js/jquery.bs_pagination.js"></script>
+<script src="plugins/bs_pagination/js/cn.js"></script>
 
 <script>
     $(function () {
@@ -346,18 +357,52 @@
         // });
 
         //todo 初始化表格
+        var dictTypes = $("#dictTypes");
         var table = $("#dictTypes").DataTable({
-            "paging": true,
+            "paging": false,
+            "serverSide": true,
             "lengthChange": true,
-            "searching": true,
+            "searching": false,
             "ordering": true,
-            "info": true,
-            "autoWidth": true,
+            "info": false,
+            "autoWidth": false,
             "responsive": true,
             "ajax": {
-                url: "dictionaryType/getAll.action",
-                type: "get",
+                url: "dictionaryType/getPage.action",
+                type: "post",
+                contentType: "application/json; charset=UTF-8",
+                data: function () {
+                    return JSON.stringify({
+                        "currentPage": dictTypes.attr("data-currentpage"),
+                        "rowsPerPage": dictTypes.attr("data-rowsperpage")
+                    });
+                },
                 dataType: "json",
+                dataSrc: function (data) {
+                    if (data.result === "success") {
+                        $("#pages").bs_pagination({
+                            currentPage: data.data.currentPage,
+                            rowsPerPage: data.data.rowsPerPage,
+                            maxRowsPerPage: data.data.maxRowsPerPage,
+                            totalRows: data.data.totalRows,
+                            totalPages: data.data.totalPages,
+                            visiblePageLinks: data.data.visiblePageLinks,
+                            showGoToPage: true,
+                            showRowsPerPage: true,
+                            showRowsInfo: true,
+                            showRowsDefaultInfo: true,
+                            onChangePage: function (event, data) {
+                                dictTypes.attr("data-currentpage", data.currentPage);
+                                dictTypes.attr("data-rowsperpage", data.rowsPerPage);
+                                dictTypes.DataTable().ajax.reload();
+                            }
+                        });
+                        return data.data.data;
+                    } else {
+                        alert(data.msg);
+                        return null;
+                    }
+                },
                 async: false
             },
             "columns": [
@@ -368,6 +413,10 @@
                 {"data": null}
             ],
             "columnDefs": [
+                {
+                    "targets": "_all",
+                    "defaultContent": ""
+                },
                 {
                     "targets": 0,
                     "render": function (data, type, row, meta) {
